--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,14 @@
             android:name=".Activity.Register"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Activity.DispatchActivity" />
+
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Activity.Password"></activity>
+
+        <activity android:name=".Activity.Password"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
