--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@
 /build
 /captures
 .externalNativeBuild
-/InitializeApplication.java
+C:\Users\Emile1\AndroidStudioProjects\FindAParty2\app\src\main\java\com\example\emile1\findaparty\Activity\InitializeApplication.java
