--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
     <application
         android:name=".Activity.InitializeApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_icon2"
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
             android:name=".Activity.Login"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".Activity.Register"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -41,6 +41,9 @@
         <activity
             android:name=".Activity.Password"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.MyLanDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
