retrieve JSON Objects ok

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'com.parse:parse-android:1.+'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
