--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <application
         android:name=".Activity.InitializeApplication"
@@ -15,6 +20,7 @@
         android:icon="@mipmap/ic_icon2"
         android:label="@string/app_name"
         android:supportsRtl="true">
+
         <activity
             android:name=".Activity.Login"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
@@ -44,6 +50,9 @@
         <activity
             android:name=".Activity.MyLanDetailsActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_api_key"/>
     </application>
 
 </manifest>
