--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile files('libs/Parse-1.13.0.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.flipboard:bottomsheet-core:1.5.3'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.parse.bolts:bolts-android:1.+'
