--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:design:25.3.0'
     compile 'com.flipboard:bottomsheet-core:1.5.3'
+    compile 'com.android.support:cardview-v7:21.+'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.parse.bolts:bolts-android:1.+'
