--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,9 @@
 
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature android:name="android.hardware.location.network" />
-
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:name=".Activity.InitializeApplication"
@@ -23,7 +22,6 @@
         android:icon="@mipmap/ic_icon2"
         android:label="@string/app_name"
         android:supportsRtl="true">
-
         <activity
             android:name=".Activity.Activity.Login"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
@@ -52,10 +50,13 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Activity.Activity.MyLanDetailsActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
 
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_api_key"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_api_key" />
+
+        <activity android:name=".Activity.Activity.LanDetailsActivity"></activity>
     </application>
 
 </manifest>
