--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:required="true" />
 
     <application
-        android:name=".Activity.InitializeApplication"
+        android:name=".Activity.Activity.InitializeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_icon2"
         android:label="@string/app_name"
